feat: add products endpoints
