# internal/handler/client.go
@@ -23,15 +23,16 @@ type createClientRequest struct {
 }
 
 // CreateClient godoc
-//     @Summary     Registra um novo cliente
-//     @Description registra um novo cliente com nome e e-mail
-//     @Tags        Clients
-//     @Accept      json
-//     @Produce		json
-//     @Param	    createClientRequest	body createClientRequest true "Registrar novo cliente request"
-//     @Success		200	{object} clientResponse	"Cliente registrado"
-//     @Failure		400	{object} errorResponse	"Erro de validação"
-//     @Router		/clients [post]
+//
+//	@Summary     Registra um novo cliente
+//	@Description Registra um novo cliente com nome e e-mail
+//	@Tags        Clients
+//	@Accept      json
+//	@Produce		json
+//	@Param	    createClientRequest	body createClientRequest true "Registrar novo cliente request"
+//	@Success		200	{object} clientResponse	"Cliente registrado"
+//	@Failure		400	{object} errorResponse	"Erro de validação"
+//	@Router		/clients [post]
 func (handler *ClientHandler) CreateClient(ctx *gin.Context) {
 	var request createClientRequest
 	if err := ctx.ShouldBindJSON(&request); err != nil {
@@ -56,16 +57,17 @@ type getClientByCpfRequest struct {
 }
 
 // GetClientByCpf godoc
-//     @Summary     Busca um cliente
-//     @Description buscar um cliente pelo Cpf
-//     @Tags        Clients
-//     @Accept      json
-//     @Produce		json
-//	   @Param	    cpf	path		string				true	"CPF"
-//     @Success		200	{object}    clientResponse	"Cliente"
-//     @Failure		400	{object}    errorResponse	"Erro de validação"
-//	   @Failure		404	{object}	errorResponse   "Cliente nao encontrado"
-//     @Router		/clients/{cpf} [get]
+//
+//	    @Summary     Busca um cliente
+//	    @Description buscar um cliente pelo Cpf
+//	    @Tags        Clients
+//	    @Accept      json
+//	    @Produce		json
+//		   @Param	    cpf	path		string				true	"CPF"
+//	    @Success		200	{object}    clientResponse	"Cliente"
+//	    @Failure		400	{object}    errorResponse	"Erro de validação"
+//		   @Failure		404	{object}	errorResponse   "Cliente nao encontrado"
+//	    @Router		/clients/{cpf} [get]
 func (handler *ClientHandler) GetClientByCpf(ctx *gin.Context) {
 	var request getClientByCpfRequest
 	if err := ctx.ShouldBindUri(&request); err != nil {
